--- a/back/.env
+++ b/back/.env
@@ -30,3 +30,7 @@ APP_SECRET=5c24050064ba7faafd93825bfad9ab80
 ###< doctrine/doctrine-bundle ###
 
 
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
