--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,8 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/test-utils": "^2.3.2",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.44.0",
+    "eslint-plugin-vue": "^9.15.1",
     "jsdom": "^22.1.0",
     "postcss": "^8.4.25",
     "tailwindcss": "^3.3.2",
