--- a/back/composer.json
+++ b/back/composer.json
@@ -11,6 +11,8 @@
         "doctrine/doctrine-bundle": "^2.10",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.15",
+        "friendsofsymfony/rest-bundle": "^3.5",
+        "jms/serializer": "^3.26",
         "lexik/jwt-authentication-bundle": "^2.18",
         "nelmio/cors-bundle": "^2.3",
         "symfony/console": "6.3.*",
@@ -23,7 +25,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
-        "symfony/maker-bundle": "^1.49"
+        "symfony/maker-bundle": "^1.50"
     },
     "config": {
         "allow-plugins": {
