--- a/back/composer.json
+++ b/back/composer.json
@@ -15,6 +15,7 @@
         "jms/serializer": "^3.26",
         "lexik/jwt-authentication-bundle": "^2.18",
         "nelmio/cors-bundle": "^2.3",
+        "symfony/apache-pack": "^1.0",
         "symfony/console": "6.3.*",
         "symfony/dotenv": "6.3.*",
         "symfony/flex": "^2",
