--- a/back/config/packages/security.yaml
+++ b/back/config/packages/security.yaml
@@ -32,13 +32,13 @@ security:
             provider: app_user_provider
 
     access_control:
-        - { path: ^/api/login, roles: PUBLIC_ACCESS }
-        - { path: ^/api/guitars/create,       roles: IS_AUTHENTICATED_FULLY }
-        - { path: ^/api/guitars/edit,       roles: IS_AUTHENTICATED_FULLY }
-        - { path: ^/api/guitars/delete,       roles: IS_AUTHENTICATED_FULLY }
-        - { path: ^/api/brand/create,       roles: IS_AUTHENTICATED_FULLY }
-        - { path: ^/api/brand/edit,       roles: IS_AUTHENTICATED_FULLY }
-        - { path: ^/api/brand/delete,       roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api/login, roles: PUBLIC_ACCESS, requires_channel: https }
+        - { path: ^/api/guitars/create,       roles: IS_AUTHENTICATED_FULLY, requires_channel: https }
+        - { path: ^/api/guitars/edit,       roles: IS_AUTHENTICATED_FULLY, requires_channel: https }
+        - { path: ^/api/guitars/delete,       roles: IS_AUTHENTICATED_FULLY, requires_channel: https }
+        - { path: ^/api/brand/create,       roles: IS_AUTHENTICATED_FULLY, requires_channel: https }
+        - { path: ^/api/brand/edit,       roles: IS_AUTHENTICATED_FULLY, requires_channel: https }
+        - { path: ^/api/brand/delete,       roles: IS_AUTHENTICATED_FULLY, requires_channel: https }
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
